fix spacing

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   border-radius: 15px;
   text-align: center;
   font-size: 6vmin;
+  margin: 5px;
 }
 
 .text {
